fixing alignment on web app page

--- a/components/services/WebAppDevelopment/Styles.css
+++ b/components/services/WebAppDevelopment/Styles.css
@@ -215,7 +215,7 @@
 @media (min-width: 1025px) {
   .industries-wrapper .industry-card {
     flex: 1 1 calc(33.333% - 0.5rem);
-    height: 300px; /* fixed height */
+    /* height: 300px;  */
     transition: all 0.4s ease;
   }
 
@@ -236,7 +236,7 @@
 @media (max-width: 1028px) and (min-width: 640px) {
   .industries-wrapper .industry-card {
     flex: 1 1 calc(50% - 0.5rem);
-    height: 390px;
+    /* height: 250px; */
   }
 }
 
@@ -244,6 +244,6 @@
 @media (max-width: 639px) {
   .industries-wrapper .industry-card {
     flex: 1 1 100%;
-    height: 390px;
+    /* height: 390px; */
   }
 }
